Prevent overflow on health program highlight

--- a/src/health-program/health-program.scss
+++ b/src/health-program/health-program.scss
@@ -45,6 +45,7 @@
         padding: 4rem;
         margin: 0;
         flex: 1 0 0;
+        font-size: 3rem;
     }
 
     &::after {
